testament/tests/shouldfail/texitcode1.nim
discard """
  targets: "c"
  exitcode: 1
"""
